--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "sequential_plot_viewer_frontend",
+  "name": "sequential_plot_viewer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "datatables.net-dt": "^1.10.21",
+    "highcharts": "^8.2.0",
+    "highcharts-react-official": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-table-v6": "^6.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-backend": "cd backend && venv/bin/flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -30,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
